# doc23

./: .gitignore  .pre-commit-config.yaml  ADVANCED_USAGE_doc23.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
doc23/: __init__.py  allowed_types.py  config_tree.py  core.py  doc23.py  gardener.py  main.py  parse_example.py
doc23/extractors/: base.py  docx.py  odt.py  pdf.py  rtf.py
test/: __init__.py  config.json  test_doc23.py  test_document.docx  test_document.odt  test_document.txt  test_structure.py
tests/: test_gardener.py
